# app/models/mysql/wallet.py
@@ -37,6 +37,11 @@ class Wallet(Base):
         nullable=False,
         comment="ネットワーク名",
     )
+    token_symbol = Column(
+        String(20),
+        nullable=False,
+        comment="トークンシンボル",
+    )
     chain_id = Column(
         BigInteger,
         nullable=False,
